<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="8dp"
    tools:context=".ui.main.ui.home.HomeFragment">

    <FrameLayout
        android:id="@+id/flBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@drawable/photo_home" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:text="@string/app_slogan"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="112dp"
            android:background="#00FFFFFF"
            android:src="@drawable/ic_img_btn" />

    </FrameLayout>

    <TextView
        android:id="@+id/tvBibit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/bibit"
        android:textColor="@color/green_800"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/flBanner"
        app:layout_constraintTop_toBottomOf="@+id/flBanner" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/flBanner"
        app:layout_constraintStart_toStartOf="@+id/tvBibit"
        app:layout_constraintTop_toBottomOf="@+id/tvBibit"
        app:tabIndicator="@drawable/tab_shape"
        app:tabIndicatorAnimationMode="elastic"
        app:tabIndicatorColor="@color/green_700"
        app:tabIndicatorFullWidth="true"
        app:tabIndicatorHeight="40dp"
        app:tabInlineLabel="false"
        app:tabTextAppearance="@style/CustomTabStyle"
        app:tabSelectedTextColor="@color/white_200"
        app:tabTextColor="@color/white_600">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inpari" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inpago" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Hipa" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Inpara" />
    </com.google.android.material.tabs.TabLayout>


</androidx.constraintlayout.widget.ConstraintLayout>